[gd_scene load_steps=5 format=3 uid="uid://nfkkds3x475i"]

[ext_resource type="Script" path="res://scripts/fill_water.gd" id="1_b2cgp"]
[ext_resource type="Gradient" uid="uid://dxvbta8kii6r2" path="res://assets/sewage_color_gradient.tres" id="2_7m7o6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ywy2a"]
size = Vector2(202, 20)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_381p0"]
gradient = ExtResource("2_7m7o6")

[node name="Water" type="Area2D"]
z_index = 600
collision_layer = 0
collision_mask = 2
script = ExtResource("1_b2cgp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_ywy2a")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.552941)
position = Vector2(0, -10)
rotation = -1.5708
scale = Vector2(0.0800007, 202.792)
texture = SubResource("GradientTexture1D_381p0")

[node name="DmgTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="DmgTimer" to="." method="_on_dmg_timer_timeout"]
